# soxbar

./: Cargo.toml  LICENSE  README  README.md  Sox Control Center 2026.desktop  install.lua  play_info.rs  setup_playlist.rs
src/: helper.rs  list_sox.rs  main.rs  play_info.rs  play_sox_bin.rs  soxbar-setup.rs  stop_sox.rs
